--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -1,10 +1,10 @@
 # 1988: Two component of memory
 
-# 1988：记忆双组分模型
+# 1988：记忆的两个组分
 
 [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) lays at the foundation of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and is expressed explicitly in [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). It differentiates between how [stable](https://supermemo.guru/wiki/Stability) knowledge is in long term memory storage, and how [easy it is to retrieve](https://supermemo.guru/wiki/Retrievability). This remains a little known and quintessential fact of the theory of learning that one can be fluent and still remember poorly.
 
-[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区别于[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
+[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区分了知识在长期记忆存储中的稳定性和提取的难易程度。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
 
 Fluency is a poor measure of learning in the long term
 
@@ -12,7 +12,7 @@ Fluency is a poor measure of learning in the long term
 
 ## Components of long-term memory
 
-## 长期记忆的组成部分
+## 长期记忆的组分
 
 For many years, memory researchers used the term *strength of memory*. It was supposed to reflect how well things are remembered.
 
@@ -20,15 +20,15 @@ For many years, memory researchers used the term *strength of memory*. It was su
 
 My work over [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) in the mid 1980s lead to a quick realization that one variable, *strength*, is not enough to describe the status of a piece of knowledge stored in long-term memory. We need two variables that separate the strength from the ease with which a fact can be retrieved from memory.
 
-上世纪80年代中期，我对[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的研究让我很快意识到，一个变量*强度*不足以描述存储在长期记忆中的知识的状态。我们需要两个变量来区分事实从内存中检索的难易程度。
+上世纪 80 年代中期，我对[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的研究让我很快意识到，一个*强度*变量不足以描述存储在长期记忆中的知识的状态。我们需要两个变量来区分事实从记忆中提取的难易程度。
 
 I concluded that the status of a piece of knowledge stored in long-term memory can be described by two variables that I named: [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). Stability of memory tells you how long the memory can last in the storage. Retrievability tells you how easy it is to recall a piece of knowledge. Those two variables used to be conflated in memory research.
 
-我的结论是，存储在长期记忆中的知识的状态可以用两个变量来描述：[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)。记忆的稳定性告诉您内存在存储中可以持续多长时间。可检索性告诉你回忆一段知识是多么容易。在记忆研究中，这两个变量常常被混为一谈。
+我的结论是，存储在长期记忆中的知识的状态可以用两个变量来描述：[稳定性](https://supermemo.guru/wiki/Stability)和[可提取性](https://supermemo.guru/wiki/Retrievability)。记忆的稳定性告诉您记忆在存储中可以持续多长时间。可提取性告诉你回忆一段知识是多么容易。在记忆研究中，这两个变量常常被混为一谈。
 
 Amazingly, three decades after my observations, the idea of two components of memory is still to permeate mainstream memory research. In 2018, most of papers ignore the separation between the two variables and still rely on a single concept of *memory strength*. This leads to monumental confusion and slow progress in research.
 
-令人惊讶的是，在我观察了三十年之后，记忆的两个组成部分的概念仍然渗透到主流的记忆研究中。2018年，大多数论文忽略了这两个变量的分离，仍然依赖于单一的“记忆强度”概念。这导致了巨大的困惑和研究进展缓慢。
+令人惊讶的是，在我观察了三十年之后，记忆的两个组分的概念仍然在渗透主流的记忆研究。2018 年，大多数论文忽略了这两个变量的分离，仍然依赖于单一的“记忆强度”概念。这导致了巨大的困惑和研究进展缓慢。
 
 ## Origins of the two component model of memory
 
@@ -36,35 +36,35 @@ Amazingly, three decades after my observations, the idea of two components of me
 
 I first described the idea of the [two components of long-term memory](https://supermemo.guru/wiki/Two_component_model_of_memory) in a paper for my computer simulations class on Jan 9, 1988. In an unrelated line of reasoning, in the same paper, I concluded that different circuits must be involved in [declarative](https://supermemo.guru/wiki/Declarative_learning) and [procedural learning](https://supermemo.guru/wiki/Procedural_learning).
 
-1988年1月9日，我在计算机模拟课上的一篇论文中首次描述了[长期记忆的两个组成部分](https://supermemo.guru/wiki/Two_component_model_of_memory)。在同一篇论文中，我用了一种不相关的推理方法，得出结论:[陈述性](https://supermemo.guru/wiki/ative_learning)和[过程性学习](https://supermemo.guru/wiki/programural_learning)必须涉及不同的电路。
+1988 年 1 月 9 日，我在计算机模拟课上的一篇论文中首次描述了[长期记忆的两个组分](https://supermemo.guru/wiki/Two_component_model_of_memory)。在同一篇论文中，我用了一种不相关的推理方法，得出结论：[陈述性学习](https://supermemo.guru/wiki/programural_learning)和[过程性学习](https://supermemo.guru/wiki/programural_learning)一定涉及不同的回路。
 
 If you pause for a minute, the whole idea of the two components should be pretty obvious. If you take two [memories](https://supermemo.guru/wiki/Item) right after a review, one with a short [optimum interval](https://supermemo.guru/wiki/Optimum_interval), and the other with a long optimum interval, the memory status of the two must differ. Both can be recalled perfectly (maximum [retrievability](https://supermemo.guru/wiki/Retrievability)) and they also need to differ in how long they can last in memory (different [stability](https://supermemo.guru/wiki/Stability)). I was surprised I could not find any literature on the subject. However, if the literature has no mention of the existence of the [optimum interval](https://supermemo.guru/wiki/Optimum_interval) in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), this seemingly obvious conclusion might be hiding behind another seemingly obvious idea: the [progression of increasing interval in optimally spaced review](https://supermemo.guru/wiki/Birth_of_SuperMemo). This is a lovely illustration how human progress is incremental and agonizingly slow. We are notoriously bad at thinking out of the box. The darkest place is under the candlestick. This weakness can be broken with an explosion of communication on the web. I advocate less [peer review](https://supermemo.guru/wiki/Peer_review), and more bold hypothesizing. I speak of a fantastic example coming from [Robin Clarke's paper in reference to Alzheimer's](https://supermemo.guru/wiki/Bad_learning_contributes_to_Alzheimer's). Strict peer review is reminiscent of [Prussian schooling](https://supermemo.guru/wiki/Prussian_education_system): in the quest for perfection, we lose our creativity, then humanity, and ultimately the pleasure of life.
 
-如果您暂停一分钟，那么这两个组件的整个思想应该是非常明显的。如果您在检查之后立即使用两个[memory](https://supermemo.guru/wiki/Item)，一个使用短[optimization interval](https://supermemo.guru/wiki/Optimum_interval)，另一个使用长优化interval，那么这两个内存状态必须不同。它们都可以被完美地回收(maximum [retrievability](https://supermemo.guru/wiki/Retrievability))，而且它们还需要在内存中保存的时间上有所不同(different [stability](https://supermemo.guru/wiki/Stability))。我很惊讶我找不到任何关于这个主题的文献。然而,如果文献没有提到的存在(最优区间)(记忆),这个看似显而易见的结论可能会躲在另一个看似显而易见的想法:的进展增加对最优区间间隔的评论。这是一个可爱的例子，说明人类的进步是如何渐进和令人痛苦的缓慢。众所周知，我们不善于打破常规。烛台下是最黑暗的地方。这一弱点可以通过网络通讯的爆炸来打破。我提倡减少[同行评审](https://supermemo.guru/wiki/Peer_review)，并进行更大胆的假设。我提到了一个来自罗宾·克拉克关于阿尔茨海默氏症的论文中的绝妙例子。严格的同行审查让人想起[普鲁士的学校教育](https://supermemo.guru/wiki/Prussian_education_system):在追求完美的过程中，我们失去了创造力，失去了人性，最终失去了生活的乐趣。
+如果您停下来思考一分钟，那么这两个组件的整个思想应该是非常显然的。如果你在复习后马上取两段记忆，一段最佳时间间隔很短，另一段最佳时间间隔很长，那么这两段记忆的记忆状态必然不同。两者都可以被完美地回忆(最大的可提取性)，它们还需要在记忆中持续的时间上有所不同(不同的稳定性)。我很惊讶我找不到任何关于这个主题的文献。然而，如果文献中没有提及在间隔重复中存在最优间隔，那么这个看似明显的结论可能隐藏在另一个看似明显的概念背后：在最优间隔复习中间隔递增的级数。这是一个可爱的例子，说明人类的进步是渐进的，而且缓慢得令人痛苦。我们是出了名的不善于创新。烛台下最暗。这一弱点可以通过网络交流的爆炸来打破。我主张少一些同行审查，多一些大胆的假设。我提到了 Robin Clarke 关于阿尔茨海默病的论文中的一个很好的例子。严格的同行审查让人想起普鲁士的学校教育：在追求完美的过程中，我们失去了创造力，失去了人性，最终失去了生活的乐趣。
 
 When I first presented my ideas to my teacher Dr Katulski on Feb 19, 1988, he was not too impressed, but he gave me a pass for computer simulations credit. Incidentally, a while later, Katulski became one of the first users of [SuperMemo 1.0 for DOS](https://supermemo.guru/wiki/SuperMemo_1.0_for_DOS).
 
-1988年2月19日，当我第一次向我的老师卡图斯基博士提出我的想法时，他并没有给我留下太深刻的印象，但他给了我一张计算机模拟学分的通行证。顺便说一句，不久之后，Katulski成为[SuperMemo 1.0 for DOS](https://supermemo.guru/wiki/SuperMemo_1.0_for_DOS)的首批用户之一。
+1988 年 2 月 19 日，当我第一次向我的老师 Katulski 博士提出我的想法时，他并没有给我留下太深刻的印象，但他给了我一张计算机模拟学分的通行证。顺便说一句，不久之后，Katulski 成为 [SuperMemo 1.0 for DOS](https://supermemo.guru/wiki/SuperMemo_1.0_for_DOS) 的首批用户之一。
 
 In my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) (1990), I added a slightly more formal proof of the existence of the two components (see [next](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Proof)). That part of my thesis remained unnoticed.
 
-在我的[Master's Thesis](https://supermemo.guru/wiki/Master's _thesis)(1990)中，我添加了一个稍微正式的证明，证明这两个组件的存在(参见[next](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)# proof))。我论文的那一部分没有引起注意。
+在我的[硕士论文](https://supermemo.guru/wiki/Master's _thesis)(1990)中，我添加了一个稍微正式的证明，证明这两个组件的存在(参见[下一节](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)# proof))。我论文的那一部分没有引起注意。
 
 In 1994, J. Kowalski [wrote in Enter](http://www.super-memory.com/articles/kowal.htm), Poland:
 
-1994年，J.科瓦尔斯基[wrote In Enter](http://www.supermemory.com/articles/kowal.htm)，波兰:
+1994年，J.Kowalski 在波兰恩特写道：
 
 > We got to the point where the evolutionary interpretation of memory indicates that it works using the principles of increasing intervals and the [spacing effect](https://supermemo.guru/wiki/Spacing_effect). Is there any proof for this model of memory apart from the evolutionary speculation? In his Doctoral Dissertation, Wozniak discussed widely molecular aspects of memory and has presented a hypothetical model of changes occurring in the synapse in the process of learning. The novel element presented in the thesis was the distinction between the [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability) of memory traces. This could not be used to support the validity of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) because of the simple fact that it was SuperMemo itself that laid the groundwork for the hypothesis. However, an increasing molecular evidence seems to coincide with the stability-retrievability model providing, at the same time, support for the correctness of assumptions leading to SuperMemo. In plain terms, retrievability is a property of memory which determines the level of efficiency with which synapses can fire in response to the stimulus, and thus elicit the learned action. The lower the retrievability the less you are likely to recall the correct response to a question. On the other hand, stability reflects the history of earlier repetitions and determines the extent of time in which memory traces can be sustained. The higher the stability of memory, the longer it will take for the retrievability to drop to the zero level, i.e. to the level where memories are permanently lost. According to Wozniak, when we learn something for the first time we experience a slight increase in the stability and retrievability in synapses involved in coding the particular stimulus-response association. In time, retrievability declines rapidly; the phenomenon equivalent to forgetting. At the same time, the stability of memory remains at the approximately same level. However, if we repeat the association before retrievability drops to zero, retrievability regains its initial value, while stability increases to a new level, substantially higher than at primary learning. Before the next repetition takes place, due to increased stability, retrievability decreases at a slower pace, and the inter-repetition interval might be much longer before forgetting takes place. Two other important properties of memory should also be noted: (1) repetitions have no power to increase the stability at times when retrievability is high (spacing effect), (2) upon forgetting, stability declines rapidly
 >
-> 我们已经到了这样一个阶段，对记忆的进化解释表明，它使用的原理是增加间隔和[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。除了进化论的推测外，还有什么证据可以证明这种记忆模型吗?在他的博士论文中，沃兹尼亚克广泛地讨论了记忆的分子方面，并提出了一个假设模型，描述了学习过程中突触发生的变化。本文提出的新元素是内存跟踪的[稳定性](https://supermemo.guru/wiki/Stability)和[可检索性](https://supermemo.guru/wiki/Retrievability)之间的区别。这不能用来支持[SuperMemo](https://supermemo.guru/wiki/SuperMemo)的有效性，因为一个简单的事实是，正是SuperMemo本身奠定了假设的基础。然而，越来越多的分子证据似乎与稳定性-可检索性模型相吻合，同时，该模型为导致SuperMemo的假设的正确性提供了支持。简单地说，可检索性是记忆的一种属性，它决定了突触对刺激反应的效率水平，从而引发学习行为。可检索性越低，您就越不可能回忆起对问题的正确回答。另一方面，稳定性反映了早期重复的历史，并决定了记忆痕迹能够维持的时间范围。记忆的稳定性越高，恢复能力下降到零的时间也就越长，也就是记忆永久丢失的时间。根据沃兹尼亚克的说法，当我们第一次学习某样东西的时候，我们会在编码特定刺激反应关联的突触中体验到稳定性和可检索性的轻微提高。随着时间的推移，可收回性迅速下降;相当于遗忘的现象。同时，记忆的稳定性保持在大致相同的水平。然而，如果我们在可检索性下降到零之前重复这种关联，可检索性将恢复其初始值，而稳定性将增加到一个新的水平，显著高于初级学习时的水平。在下一次重复发生之前，由于稳定性的提高，可检索性以较慢的速度下降，在遗忘发生之前，重复之间的间隔可能要长得多。记忆的另外两个重要特性也应该注意到:(1)当可检索性高时，重复没有能力增加稳定性(间隔效应)，(2)遗忘时，稳定性迅速下降
+> 我们已经到了这样一个阶段，对记忆的进化解释表明，它使用的原理是增加间隔和[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。除了进化论的推测外，还有什么证据可以证明这种记忆模型吗？在他的博士论文中，Wozniak 广泛地讨论了记忆的分子层面，并提出了一个假设模型，描述了学习过程中突触发生的变化。本文提出的新元素是记忆痕迹的[稳定性](https://supermemo.guru/wiki/Stability)和[可提取性](https://supermemo.guru/wiki/Retrievability)之间的区别。这不能用来支持 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的有效性，因为一个简单的事实是，正是 SuperMemo 本身奠定了假设的基础。然而，越来越多的分子层面证据似乎与稳定性-可提取性模型相吻合，同时，该模型为导向 SuperMemo 的假设的正确性提供了支持。简单地说，可提取性是记忆的一种属性，它决定了突触对刺激反应的效率水平，从而引发学习行为。可提取性越低，您就越不可能回忆起对问题的正确回答。另一方面，稳定性反映了早期重复的历史，并决定了记忆痕迹能够维持的时间范围。记忆的稳定性越高，可提取性下降到零，即下降到记忆永久遗忘所需的时间就越长。根据 Wozniak 的说法，当我们第一次学习某样东西的时候，我们会在编码特定刺激反应关联的突触中体验到稳定性和可提取性的轻微提高。随着时间的推移，可提取性迅速下降；相当于遗忘的现象。同时，记忆的稳定性保持在大致相同的水平。然而，如果我们在可提取性下降到零之前重复这种关联，可提取性将恢复其初始值，而稳定性将增加到一个新的水平，显著高于初次学习时的水平。在下一次重复发生之前，由于稳定性的提高，可提取性以较慢的速度下降，在遗忘发生之前，重复之间的间隔可能要长得多。记忆的另外两个重要特性也应该注意到：(1)当可提取性高时，重复不能增加稳定性(间隔效应)，(2)遗忘时，稳定性迅速下降
 
 ## Peer review publication (1995)
 
-## 同行评议刊物(1995)
+## 同行评议刊物 (1995)
 
 We published our ideas with Drs [Janusz Murakowski](https://supermemo.guru/wiki/Janusz_Murakowski) and [Edward Gorzelanczyk](https://supermemo.guru/wiki/Edward_Gorzelanczyk) in [1995](http://super-memory.com/english/2vm.htm). Murakowski perfected the mathematical proof. Gorzelanczyk fleshed out the molecular model. We have not heard much enthusiasm or feedback from the scientific community. The idea of two components of memory is like wine, the older it gets, the better it tastes. We keep wondering when it will receive a wider recognition. After all, we do not live in [Mendel](https://en.wikipedia.org/wiki/Gregor_Mendel)'s time to keep a good gem hidden in some obscure archive. There are [millions of users](https://supermemo.guru/wiki/Exponential_adoption_of_spaced_repetition) of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) and even if 0.1% got interested in the theory, they would hear of our two components. Today, even the [newest algorithm](https://supermemo.guru/wiki/Algorithm_SM-17) in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) is based on the two-component model and it works like a charm. Ironically, users tend to flock to [simpler solutions](https://supermemo.guru/wiki/Algorithm_SM-2), where all the mechanics of human memory remain hidden. Even at [supermemo.com](http://supermemo.com/) we make sure we do not scare customers with excess numbers on the screen. This way we trade the instructional power of the model for better adoption among users who crave simplicity.
 
-我们与[Janusz Murakowski博士](https://supermemo.guru/wiki/Janusz_Murakowski)和[Edward Gorzelanczyk](https://supermemo.guru/wiki/Edward_Gorzelanczyk)在[1995](http://supermemory.com/english/2vm.htm)发表了我们的想法。村上春树完善了数学证明。Gorzelanczyk充实了分子模型。我们没有从科学界听到太多的热情和反馈。记忆的两种成分就像葡萄酒，越老，味道越好。我们一直想知道它什么时候会得到更广泛的认可。毕竟，我们并不是生活在[孟德尔](https://en.wikipedia.org/wiki/Gregor_Mendel)的时代，把一块好宝石藏在某个晦涩的档案中。[间隔重复]的[百万用户](https://supermemo.guru/wiki/Exponential_adoption_of_spaced_repetition)[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)即使只有0.1%的人对这个理论感兴趣，他们也会听说我们的两个组件。今天，甚至[SuperMemo](https://supermemo.guru/wiki/Algorithm_SM-17)中的[最新算法](https://supermemo.guru/wiki/SuperMemo)都是基于双组件模型的，而且运行起来很有魅力。具有讽刺意味的是，用户往往会涌向[更简单的解决方案](https://supermemo.guru/wiki/Algorithm_SM-2)，那里隐藏着人类记忆的所有机制。即使在[supermemo.com](http://supermemo.com/)上，我们也确保不会用屏幕上过多的数字吓到客户。这样，我们就可以在渴望简单的用户中更好地采用模型的指导功能。
+我们与[Janusz Murakowski 博士](https://supermemo.guru/wiki/Janusz_Murakowski)和 [Edward Gorzelanczyk](https://supermemo.guru/wiki/Edward_Gorzelanczyk) 在[1995](http://supermemory.com/english/2vm.htm)发表了我们的想法。村上春树完善了数学证明。Gorzelanczyk 充实了分子模型。我们没有从科学界听到太多的热情和反馈。记忆双组分的概念就像葡萄酒，时间越久，味道就越好。我们一直想知道它什么时候会得到更广泛的认可。毕竟，我们并不是生活在[孟德尔](https://en.wikipedia.org/wiki/Gregor_Mendel)的时代，把一块好宝石藏在某个晦涩的档案中。间隔重复的用户数以百万计，即使只有 0.1% 的人对这个理论感兴趣，他们也会听说我们的两个组分。今天，甚至 [SuperMemo](https://supermemo.guru/wiki/Algorithm_SM-17) 中的[最新算法](https://supermemo.guru/wiki/SuperMemo)都是基于双组分模型的，而且运行起来很有魅力。具有讽刺意味的是，用户往往会涌向[更简单的解决方案](https://supermemo.guru/wiki/Algorithm_SM-2)，那里隐藏着人类记忆的所有机制。即使在 [supermemo.com](http://supermemo.com/) 上，我们也确保不会用屏幕上过多的数字吓到客户。这样，我们就可以在渴望简单的用户中更好地采用模型的指导功能。
 
 ## Robert Bjork's research
 
@@ -72,15 +72,15 @@ We published our ideas with Drs [Janusz Murakowski](https://supermemo.guru/wiki/
 
 The concept of the two components of memory has parallels in prior research, esp. by [Bjork](https://supermemo.guru/wiki/Bjork).
 
-记忆的两个组成部分的概念在以前的研究中有相似之处，特别是在[Bjork](https://supermemo.guru/wiki/Bjork)。
+记忆的两个组分的概念在以前的研究中有相似之处，特别是在 [Bjork](https://supermemo.guru/wiki/Bjork) 的研究中。
 
 In the 1940s, scientists investigated habit strength and response strength as independent components of behavior in rats. Those concepts were later reformulated in Bjork's disuse theory. Herbert Simon seems to have noticed the [need for memory stability variable in his paper in 1966](https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory). In 1969, [Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork) formulated the *Strength Paradox*: a reverse relationship between the probability of recall and the memory effect of a review. Note that his is a restatement of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) in terms of the [two component model](https://supermemo.guru/wiki/Two_component_model), which is just a short step away from formulating the distinction between the variables of memory. This led to [Bjork's New Theory of Disuse (1992)](https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf) that would distinguish between the storage strength and the retrieval strength. Those are close equivalents of [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) with a slightly different interpretation of the mechanisms that underlie the distinction. Most strikingly, Bjork believes that when [retrievability](https://supermemo.guru/wiki/Retrievability) drops to zero, stable memories are still retained (in our model, stability becomes indeterminate). At the cellular level, Bjork might be right, at least for a while, but practise of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) shows the power of [complete forgetting](https://supermemo.guru/wiki/Complete_forgetting), while, from the neural point of view, retaining memories in disuse would be highly inefficient independent of their [stability](https://supermemo.guru/wiki/Stability). Last but not least, Bjork defines storage strength in terms of connectivity, which is very close to what I believe happens in good students: [coherence](https://supermemo.guru/wiki/Coherence) affects [stability](https://supermemo.guru/wiki/Stability).
 
-在20世纪40年代，科学家们研究了习惯强度和反应强度作为行为的独立组成部分。这些概念后来在比约克的废用理论中得到了重新表述。赫伯特•西蒙(Herbert Simon)似乎在1966年的论文中注意到了(需要内存稳定性变量)(https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory)。1969年，[Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork)提出了“强度悖论”:回忆的概率与回顾的记忆效果之间的反向关系。注意，他在[two component model](https://supermemo.guru/wiki/Spacing_effect)中重述了[间距效应](https://supermemo.guru/wiki/Two_component_model)，这离明确内存变量之间的区别只有一步之遥。这导致(比约克的废弃的新理论》(1992))(https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf),区分存储能力和检索能力。它们与[可检索性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)非常相似，但对两者区别背后的机制的解释略有不同。最引人注目的是，Bjork认为当[可检索性](https://supermemo.guru/wiki/Retrievability)降到0时，稳定的内存仍然保留(在我们的模型中，稳定性变得不确定)。在细胞水平,比约克可能是正确的,至少有一段时间,但练习(SuperMemo) (https://supermemo.guru/wiki/SuperMemo)显示(完全忘记)(https://supermemo.guru/wiki/Complete_forgetting)的力量,同时,从神经的角度来看,留住记忆在停止使用会非常低效的独立的(稳定)(https://supermemo.guru/wiki/Stability)。最后但并非最不重要的是，Bjork根据连通性定义了存储强度，这与我认为好学生的情况非常接近:[coherence](https://supermemo.guru/wiki/Coherence)影响[稳定性](https://supermemo.guru/wiki/Stability)。
+在 20 世纪 40 年代，科学家研究了习惯强度和反应强度作为老鼠行为的独立组成部分。这些概念后来在比约克的废用理论中重新表述。赫伯特·西蒙(Herbert Simon)在 1966 年的论文中似乎注意到了记忆稳定性变量的必要性。1969 年，罗伯特·比约克(Robert Bjork)提出了强度悖论：回忆的概率和复习的记忆效果之间存在反向关系。请注意，他的是根据两分量模型对间隔效应的重述，这距离阐明记忆变量之间的区别只有一小步之遥。这导致了比约克(Bjork)的新废用理论(1992)，该理论区分了储存强度和提取强度。这是可提取性和稳定性的紧密等价物，但对作为区别基础的机制的解释略有不同。最引人注目的是，比约克认为，当可提取性降至零时，仍然保留了稳定的记忆(在我们的模型中，稳定性变得不确定)。在细胞层面上，Bjork 可能是对的，至少在一段时间内是正确的，但实践 SuperMemo 显示了完全遗忘的力量，而从神经的角度来看，保留废弃的记忆将是非常低效的，独立于它们的稳定性。最后但并非最不重要的一点是，比约克用连接性来定义存储强度，这与我认为优秀学生身上会发生的事情非常接近：一致性会影响稳定性。
 
 Why aren't the two components of memory entering mainstream research yet? I claim that if human mind tends to be short-sighted, and we all are, by design, the mind of science can be truly strangulated by strenuous duties, publish or perish, battles for grants, hierarchies, conflict of interest, [peer review](https://supermemo.guru/wiki/Peer_review), teaching obligations, and even the code of conduct. Memory researchers tend to live in a single dimension of "memory strength". In that dimension, they cannot truly appreciate true dynamics of molecular and neural processes that need to be investigated to crack the problem. Ironically, progress may come from those who tend to work in artificial intelligence or neural networks. Prodigious minds of [Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis) or [Andreas Knoblauch](https://scholar.google.de/citations?user=xVXueeQAAAAJ&hl=en) come up with twin ideas by independent reasoning process, models, and simulations. Biologists will need to listen to the language of mathematics and/or computer science.
 
-为什么记忆的两个组成部分还没有进入主流研究领域?我断言,如果人类思维往往是短视的,我们都是,通过设计,科学的思想可以通过艰苦的工作,真正绞窄的发布或灭亡,争夺赠款、层次结构、利益冲突,同行评审(https://supermemo.guru/wiki/Peer_review),教学义务,甚至行为准则。记忆研究者倾向于生活在“记忆强度”的单一维度中。在这个维度上，他们无法真正理解需要研究才能解决问题的分子和神经过程的真正动力学。具有讽刺意味的是，进步可能来自那些倾向于从事人工智能或神经网络工作的人。[Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis)或[Andreas Knoblauch](https://scholar.google.de/citations?生物学家将需要倾听数学和/或计算机科学的语言。
+为什么记忆的双组分还没有进入主流研究？我声称，如果人类的头脑倾向于短视，而我们都是故意的，那么科学的头脑可能真的会被繁重的职责、发表或灭亡、拨款之争、等级制度、利益冲突、同行评议、教学义务，甚至行为准则扼杀。记忆研究人员倾向于生活在“记忆强度”的单一维度中。在这个维度上，他们不能真正理解需要研究以解决问题的分子和神经过程的真实动力学。具有讽刺意味的是，进步可能来自那些倾向于从事人工智能或神经网络工作的人。德米斯·哈萨比斯(Demis Hassabis)或安德烈亚斯·诺布劳赫(Andreas Knoblauch)的惊人头脑通过独立的推理过程、模型和模拟提出了两个想法。生物学家将需要聆听数学和计算机科学的语言。
 
 ## Two component model in Algorithm SM-17
 
@@ -88,17 +88,17 @@ Why aren't the two components of memory entering mainstream research yet? I clai
 
 The [two component model of long-term memory](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory) underlies [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The success of Algorithm SM-17 is the ultimate practical proof for the correctness of the model.
 
-[长期内存的两个组件模型](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory)是 [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) 的基础。算法SM-17 的成功，是该模型正确性的最终实践证明。
+[长期记忆的双组分模型](https://supermemo.guru/wiki/Two_component_model_of_long-term_memory)是 [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) 的基础。算法 SM-17 的成功，是该模型正确性的最终实践证明。
 
 A graph of actual changes in the value of the two components of memory provides a conceptual visualization of the evolving memory status:
 
-记忆的两个组成部分价值的实际变化图提供了演变中的记忆状况的概念可视化：
+记忆的两个组分的值的实际变化图提供了记忆状态演变的概念性可视化：
 
 [![SuperMemo: Changes in two variables of long-term memory](https://supermemo.guru/images/thumb/5/57/Memory_status.jpg/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
 
 > **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, R10, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as ln(S)/ln(days) for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
-> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可检索性(第十次幂，R10，便于分析)。灰色网格的可检索性指标分别为R=99%、R=98%等。中间的面板显示海军的最佳间隔。重复日期用蓝色竖线标记，并以水标记。当R越过90%线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以ln(S)/ln(days)表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可检索性下降较快(指数级)，但在第7次复习后的10年时间里，可检索性仅从100%下降到94%。所有的值都来自一个实际的重复历史和内存的三个组件模型。
+> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(第十次幂，R10，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间的面板显示海军的最佳间隔。重复日期用蓝色竖线标记，并以水标记。当R越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以ln(S)/ln(days)表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第7次复习后的10年时间里，可提取性仅从100%下降到94%。所有的值都来自一个实际的重复历史和内存的三个组件模型。
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
@@ -220,9 +220,9 @@ Retrievability and stability are both necessary to code for a process of learnin
 
 [![Hypothetical mechanism involved in the process of optimal learning](https://supermemo.guru/images/thumb/0/0e/Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg/426px-Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)](https://supermemo.guru/wiki/File:Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)
 
-> ***Figure:** In my Master's Thesis titled "Optimization of learning" (1990), I presented some hypothetical concepts that might underly the process of optimal learning based on spaced repetition. (A) Molecular phenomena (B) Quantitative changes in the synapse. Those ideas are a bit dated today, but the serrated curves representing memory retrievability came to be widely known in popular publications on spaced repetition. They are usually wrongly attributed to Hermann Ebbinghaus*
+> **Figure:** In my Master's Thesis titled "Optimization of learning" (1990), I presented some hypothetical concepts that might underly the process of optimal learning based on spaced repetition. (A) Molecular phenomena (B) Quantitative changes in the synapse. Those ideas are a bit dated today, but the serrated curves representing memory retrievability came to be widely known in popular publications on spaced repetition. They are usually wrongly attributed to Hermann Ebbinghaus
 >
-> ***图片：**在我的硕士论文“优化学习”(1990)中，我提出了一些假设概念，这些概念可能是基于间隔重复的优化学习过程的基础。(A)分子现象(B)突触的数量变化。这些观点在今天看来有些过时，但代表记忆可检索性的锯齿形曲线在有关间隔重复的流行出版物中得到了广泛的认识。它们通常被错误地归因于赫尔曼•艾宾浩斯*
+> **图片：**在我的硕士论文“优化学习”(1990)中，我提出了一些假设概念，这些概念可能是基于间隔重复的优化学习过程的基础。(A)分子现象(B)突触的数量变化。这些观点在今天看来有些过时，但代表记忆可检索性的锯齿形曲线在有关间隔重复的流行出版物中得到了广泛的认识。它们通常被错误地归因于赫尔曼•艾宾浩斯
 
 ## Proof by Murakowski
 
